# google-merkle-rs

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
c/: merkletree.cpp  merkletree.h  verifier.cpp  verifier.h
merkletree/: readme.md
rust/: Cargo.toml  build.rs
rust/include/: bindings.h  merkletree.h  verifier.h
rust/lib/: .gitignore
rust/src/: bindings.rs  lib.rs
